Switch from fluid width to fixed width
- Switch from fluid width to fixed width to aid reading. Big screens
will make fluid width too wide for reading.
- Make use the body for background color and turn white on post pages
as fixed width background did no cover the page.

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -3,9 +3,10 @@
 
 body {
   padding-top: 0;
+  background: $background-gray;
 }
 
-.container-fluid {
+.container-fluid, .container {
   padding: 0;
 }
 .navbar-header {
